feat: 1.5.0 更新构建脚本 更新配置字段