@@ -1,31 +1,12 @@
 plugins {
     kotlin("jvm") version Versions.KOTLIN
     kotlin("plugin.serialization") version Versions.KOTLIN
+    id("com.github.johnrengelman.shadow") version "7.1.2"
+    application
 }
 
-allprojects {
-    apply(plugin = "org.gradle.maven-publish")
-    apply(plugin = "org.gradle.java-library")
-    apply(plugin = "org.jetbrains.kotlin.jvm")
-
-    group = Versions.GROUP
-    version = Versions.VERSION
-
-    kotlin {
-        jvmToolchain(11)
-    }
-
-    tasks {
-        test {
-            enabled = false
-            useJUnitPlatform()
-            workingDir = projectDir.resolve("run")
-        }
-    }
-}
-
-repositories {
-    mavenCentral()
+kotlin {
+    jvmToolchain(11)
 }
 
 dependencies {
@@ -37,4 +18,67 @@ dependencies {
     api(javafx("base", "win"))
     // test
     testImplementation(kotlin("test", Versions.KOTLIN))
+}
+
+allprojects {
+    apply(plugin = "org.gradle.maven-publish")
+    apply(plugin = "org.gradle.java-library")
+    apply(plugin = "org.gradle.application")
+    apply(plugin = "org.jetbrains.kotlin.jvm")
+    apply(plugin = "com.github.johnrengelman.shadow")
+
+    group = Versions.GROUP
+    version = Versions.VERSION
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        if (!name.startsWith("http-server-")) return@dependencies
+        val os = name.removePrefix("http-server-")
+        // impl
+        implementation(project(":http-server")) {
+            exclude("org.openjfx")
+        }
+        // skiko
+        implementation(skiko(
+            when (os) {
+                "mac" -> "macos-x64"
+                "win" -> "windows-x64"
+                else -> "linux-x64"
+            }
+        ))
+        // javafx
+        implementation(javafx("controls", os))
+        implementation(javafx("graphics", os))
+        implementation(javafx("base", os))
+    }
+
+    application {
+        mainClass.set("top.e404.skin.server.App")
+        applicationDefaultJvmArgs = listOf(
+            "-Dio.netty.tryReflectionSetAccessible=true",
+            "--add-opens",
+            "java.base/jdk.internal.misc=ALL-UNNAMED"
+        )
+    }
+
+    tasks {
+        shadowJar {
+            archiveFileName.set("${project.name}.jar")
+        }
+
+        build {
+            if (project.name.startsWith("http-server-")) {
+                dependsOn(shadowJar)
+            }
+        }
+
+        test {
+            enabled = false
+            useJUnitPlatform()
+            workingDir = rootDir.resolve("run")
+        }
+    }
 }
